Fix creation of keyframes **before** the first frame for scalar channels

BUG:478448